--- a/DearFutureMeV3-main/gradle/libs.versions.toml
+++ b/DearFutureMeV3-main/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ lifecycleLivedataKtx = "2.8.6"
 lifecycleViewmodelKtx = "2.8.6"
 navigationFragmentKtx = "2.8.1"
 navigationUiKtx = "2.8.1"
+glide = "4.12.0"
 
 
 [libraries]
@@ -33,12 +34,17 @@ okhttp = {module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp"}
 retrofit = {module = "com.squareup.retrofit2:retrofit",  version.ref = "converterGson"}
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson"}
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
+
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kapt = { id = "org.jetbrains.kotlin.kapt" }
 
 
